--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ DockerVolumes/
 .env
 *.sln.DotSettings.*
 Src/Api/appsettings.Development.json
+Src/AiService/Python/models/**/*
+**/**/.devcontainer/*
+**/**/*.jpg
+**/**/*.png
 
 **/obj/**
 **/bin/**
