--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Src/AiService/Python/models/**/*
 **/**/.devcontainer/*
 **/**/*.jpg
 **/**/*.png
-**/**/__pycache__/**/*
+**/**/__pycache__/*
 
 **/obj/**
 **/bin/**
