--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,11 @@ services:
       dockerfile: Dockerfile.aiservice
       args:
         - DATABASE_CONNECTION_STRING=Host=${DATABASE_HOST};Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE_NAME}
-        - RABBIT_CONNECTION_STRING=Port=${AMQP_PORT};Username=${AMQP_USERNAME_USER};Password=${AMQP_PASSWORD};ProvidedName=AiService
-        - ORIGINAL_FILES_DIRECTORY=${ORIGINAL_FILES_DIRECTORY}
-        - PROCESSED_FILES_DIRECTORY=${PROCESSED_FILES_DIRECTORY}
+        - RABBIT_CONNECTION_STRING=Host=amqp;Port=${AMQP_PORT};Username=${AMQP_USERNAME};Password=${AMQP_PASSWORD};ProvidedName=AiService
+        - ORIGINAL_FILES_DIRECTORY=/var/lib/localStorage/files/original
+        - PROCESSED_FILES_DIRECTORY=/var/lib/localStorage/files/processed
     container_name: object_detection_aiservice
     restart: unless-stopped
+    volumes:
+      - ${ORIGINAL_FILES_DIRECTORY}:/var/lib/localStorage/files/original
+      - ${PROCESSED_FILES_DIRECTORY}:/var/lib/localStorage/files/processed
