--- a/Src/Api/appsettings.Development.json
+++ b/Src/Api/appsettings.Development.json
@@ -25,5 +25,12 @@
       "ClientId": "",
       "ClientSecret": ""
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:6010"
+      }
+    }
   }
 }
