finished contenerizing, fixed minor bugs

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -10,18 +10,9 @@ WORKDIR /App/Src/Api
 RUN dotnet restore
 RUN dotnet publish -c Release -o ../../Out
 
-FROM mcr.microsoft.com/dotnet/runtime:7.0
-
-ARG ORIGINAL_FILES_DIRECTORY
-ENV original_dir=$ORIGINAL_FILES_DIRECTORY
-
-ARG PROCESSED_FILES_DIRECTORY
-ENV processed_dir=$PROCESSED_FILES_DIRECTORY
-
-ARG RABBIT_CONNECTION_STRING
-ENV rabbit_conn=$RABBIT_CONNECTION_STRING
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
 
 WORKDIR /Api
 COPY --from=build ./App/Out .
 
-ENTRYPOINT dotnet Api.dll $original_dir $processed_dir $rabbit_conn
+ENTRYPOINT dotnet Api.dll
